--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./scss/styles.scss" />
 </head>
 
-<body class="mat-typography">
+<body>
     <app-root></app-root>
 </body>
 
